--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Test using Three.js to build a VR experience</title>
+	<title>DAT505</title>
 	<!-- <meta http-equiv="Content-Type" content="text/html; charset=utf-8" /> -->
     <!-- <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"> -->
 
