--- a/index.html
+++ b/index.html
@@ -2,15 +2,18 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>DAT505</title>
+	<title>Putting city in VR</title>
 	<!-- <meta http-equiv="Content-Type" content="text/html; charset=utf-8" /> -->
     <!-- <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"> -->
 
-	<script src="js/three.js"></script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/three.js/98/three.min.js'></script>
+	<!-- <script src="js/three.js"></script> -->
 	<script src="js/StereoEffect.js"></script>
 	<script src="js/DeviceOrientationControls.js"></script>
 	<script src="js/OrbitControls.js"></script>
 
+  <script src='js/MTLLoader.js'></script>
+  <script src='js/OBJLoader.js'></script>
 	<script src="index.js"></script>
 	<link rel="stylesheet" href="css/style.css">
 </head>
