--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
   <script src='https://cdnjs.cloudflare.com/ajax/libs/three.js/98/three.min.js'></script>
 	<!-- <script src="js/three.js"></script> -->
+	<script src="js/WebVR.js"></script>
 	<script src="js/StereoEffect.js"></script>
 	<script src="js/DeviceOrientationControls.js"></script>
 	<script src="js/OrbitControls.js"></script>
