--- a/index.html
+++ b/index.html
@@ -2,11 +2,14 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Putting city in VR</title>
+	<title>CITYVRS</title>
 	<!-- <meta http-equiv="Content-Type" content="text/html; charset=utf-8" /> -->
     <!-- <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"> -->
-
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/three.js/98/three.min.js'></script>
+		<!-- Origin Trial Token, feature = WebXR Device API (For Chrome M69+), origin = https://elloella.github.io, expires = 2019-01-17 -->
+	<meta http-equiv="origin-trial" data-feature="WebXR Device API (For Chrome M69+)" data-expires="2019-01-17" content="Aq1YicFuNXJbG5bjtQcF3xllU1tEyYEovigAy/vpZ2LT3Nnl2izztNq7Rr6kLXKOK4sBa/RoQeRFl6oZ94yyQQ4AAABaeyJvcmlnaW4iOiJodHRwczovL2VsbG9lbGxhLmdpdGh1Yi5pbzo0NDMiLCJmZWF0dXJlIjoiV2ViWFJEZXZpY2VNNjkiLCJleHBpcnkiOjE1NDc3MjkwMTZ9">
+	<!-- Origin Trial Token, feature = WebXR Gamepad Support, origin = https://elloella.github.io, expires = 2019-01-17 -->
+<meta http-equiv="origin-trial" data-feature="WebXR Gamepad Support" data-expires="2019-01-17" content="Ai3G+lSxv6p9470JNWHCxmdrrI495kqEdjm129g8IMStdDThbS7HPJx4PJPktwxIh6/+STsLgloZtbIcL2zlDAcAAAByeyJvcmlnaW4iOiJodHRwczovL2VsbG9lbGxhLmdpdGh1Yi5pbzo0NDMiLCJmZWF0dXJlIjoiV2ViWFJHYW1lcGFkU3VwcG9ydCIsImV4cGlyeSI6MTU0NzcyOTAxNiwiaXNTdWJkb21haW4iOnRydWV9">
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/three.js/97/three.min.js'></script>
 	<!-- <script src="js/three.js"></script> -->
 	<script src="js/WebVR.js"></script>
 	<script src="js/StereoEffect.js"></script>
