--- a/index.html
+++ b/index.html
@@ -1,30 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<title>three.js webvr - cubes</title>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+<head>
+	<meta charset="UTF-8">
+	<title>CITYVRS</title>
+	<!-- <meta http-equiv="Content-Type" content="text/html; charset=utf-8" /> -->
+	<meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 		<!-- Origin Trial Token, feature = WebXR Device API (For Chrome M69+), origin = https://elloella.github.io, expires = 2019-01-17 -->
 	<meta http-equiv="origin-trial" data-feature="WebXR Device API (For Chrome M69+)" data-expires="2019-01-17" content="Aq1YicFuNXJbG5bjtQcF3xllU1tEyYEovigAy/vpZ2LT3Nnl2izztNq7Rr6kLXKOK4sBa/RoQeRFl6oZ94yyQQ4AAABaeyJvcmlnaW4iOiJodHRwczovL2VsbG9lbGxhLmdpdGh1Yi5pbzo0NDMiLCJmZWF0dXJlIjoiV2ViWFJEZXZpY2VNNjkiLCJleHBpcnkiOjE1NDc3MjkwMTZ9">
 	<!-- Origin Trial Token, feature = WebXR Gamepad Support, origin = https://elloella.github.io, expires = 2019-01-17 -->
   <meta http-equiv="origin-trial" data-feature="WebXR Gamepad Support" data-expires="2019-01-17" content="Ai3G+lSxv6p9470JNWHCxmdrrI495kqEdjm129g8IMStdDThbS7HPJx4PJPktwxIh6/+STsLgloZtbIcL2zlDAcAAAByeyJvcmlnaW4iOiJodHRwczovL2VsbG9lbGxhLmdpdGh1Yi5pbzo0NDMiLCJmZWF0dXJlIjoiV2ViWFJHYW1lcGFkU3VwcG9ydCIsImV4cGlyeSI6MTU0NzcyOTAxNiwiaXNTdWJkb21haW4iOnRydWV9">
-		<style>
-				body {
-					font-family: Monospace;
-					background-color: #101010;
-					color: #fff;
-					margin: 0px;
-					overflow: hidden;
-				}
-				a {
-					color: #f00;
-				}
-			</style>
-	</head>
-	<body>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/three.js/97/three.min.js'></script>
+	<!-- <script src="js/three.js"></script> -->
+	<script src="js/WebVR.js"></script>
+	<script src="js/StereoEffect.js"></script>
+	<script src="js/DeviceOrientationControls.js"></script>
+	<script src="js/OrbitControls.js"></script>
 
-		<script src="js/three.js"></script>
-		<script src="js/WebVR.js"></script>
-		<script src="js/BoxLineGeometry.js"></script>
-	</body>
-	</html>
+  <script src='js/MTLLoader.js'></script>
+  <script src='js/OBJLoader.js'></script>
+	<script src="index.js"></script>
+	<link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+	<div id="container"></div>
+</body>
+</html>
