--- a/index.html
+++ b/index.html
@@ -1,28 +1,238 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>CITYVRS</title>
-	<!-- <meta http-equiv="Content-Type" content="text/html; charset=utf-8" /> -->
-	<meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-		<!-- Origin Trial Token, feature = WebXR Device API (For Chrome M69+), origin = https://elloella.github.io, expires = 2019-01-17 -->
-	<meta http-equiv="origin-trial" data-feature="WebXR Device API (For Chrome M69+)" data-expires="2019-01-17" content="Aq1YicFuNXJbG5bjtQcF3xllU1tEyYEovigAy/vpZ2LT3Nnl2izztNq7Rr6kLXKOK4sBa/RoQeRFl6oZ94yyQQ4AAABaeyJvcmlnaW4iOiJodHRwczovL2VsbG9lbGxhLmdpdGh1Yi5pbzo0NDMiLCJmZWF0dXJlIjoiV2ViWFJEZXZpY2VNNjkiLCJleHBpcnkiOjE1NDc3MjkwMTZ9">
-	<!-- Origin Trial Token, feature = WebXR Gamepad Support, origin = https://elloella.github.io, expires = 2019-01-17 -->
-  <meta http-equiv="origin-trial" data-feature="WebXR Gamepad Support" data-expires="2019-01-17" content="Ai3G+lSxv6p9470JNWHCxmdrrI495kqEdjm129g8IMStdDThbS7HPJx4PJPktwxIh6/+STsLgloZtbIcL2zlDAcAAAByeyJvcmlnaW4iOiJodHRwczovL2VsbG9lbGxhLmdpdGh1Yi5pbzo0NDMiLCJmZWF0dXJlIjoiV2ViWFJHYW1lcGFkU3VwcG9ydCIsImV4cGlyeSI6MTU0NzcyOTAxNiwiaXNTdWJkb21haW4iOnRydWV9">
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/three.js/97/three.min.js'></script>
-	<!-- <script src="js/three.js"></script> -->
-	<script src="js/WebVR.js"></script>
-	<script src="js/StereoEffect.js"></script>
-	<script src="js/DeviceOrientationControls.js"></script>
-	<script src="js/OrbitControls.js"></script>
+  <head>
+    <title>three.js webvr - cubes</title>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, user-scalable=no"
+    />
+    <!--
+      Origin Trial Token, feature = WebXR Device API (For Chrome M69+), origin = https://threejs.org, expires = 2019-01-07
+    -->
+    <meta
+      http-equiv="origin-trial"
+      data-feature="WebXR Device API (For Chrome M69+)"
+      data-expires="2019-01-07"
+      content="ArPzyYNrUDiXsGOh647Ya7MtVUA1nM+WFMnPWu7eoF2nQHOP6mTATIbiv0w+k2kFaPofZG/04ZEQdsACq4IA0wQAAABTeyJvcmlnaW4iOiJodHRwczovL3RocmVlanMub3JnOjQ0MyIsImZlYXR1cmUiOiJXZWJYUkRldmljZU02OSIsImV4cGlyeSI6MTU0Njg4MzAxOH0="
+    />
+    <!--
+      Origin Trial Token, feature = WebXR Gamepad Support, origin = https://threejs.org, expires = 2019-01-07
+    -->
+    <meta
+      http-equiv="origin-trial"
+      data-feature="WebXR Gamepad Support"
+      data-expires="2019-01-07"
+      content="Av16a8LVXasKVQV9j3u0OlXdTfz5O9qDqhROyL5Up6R3sdOPbtFuc6n6o5DHitwnb5VdirH0GyvROwvz8xxd0AkAAABYeyJvcmlnaW4iOiJodHRwczovL3RocmVlanMub3JnOjQ0MyIsImZlYXR1cmUiOiJXZWJYUkdhbWVwYWRTdXBwb3J0IiwiZXhwaXJ5IjoxNTQ2ODgzMDE4fQ=="
+    />
+    <style>
+      body {
+        font-family: Monospace;
+        background-color: #101010;
+        color: #fff;
+        margin: 0px;
+        overflow: hidden;
+      }
+      a {
+        color: #f00;
+      }
+    </style>
+  </head>
+  <body>
+    <div id="container"></div>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/three.js/99/three.js"
+      integrity="sha256-QlZjRhqOlDukXFfprbpsdrDQws7TtQdTGDh7F7Q3310="
+      crossorigin="anonymous"
+    ></script>
+    <script src="js/WebVR.js"></script>
+    <script src="js/stereoEffect.js"></script>
+    <script src="js/DeviceOrientationControls.js"></script>
+    <script src="js/OrbitControls.js"></script>
 
-  <script src='js/MTLLoader.js'></script>
-  <script src='js/OBJLoader.js'></script>
-	<script src="index.js"></script>
-	<link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-	<div id="container"></div>
-</body>
+    <script src="js/MTLLoader.js"></script>
+    <script src="js/OBJLoader.js"></script>
+
+    <script>
+      //Global variables
+
+      var camera, scene, renderer;
+      var effect, controls;
+      var element, container;
+      var composer, octoMain, skeleton;
+      var loader;
+
+      //Execute the main functions when the page loads
+      window.onload = function(event) {
+        var clock = new THREE.Clock();
+
+        document.body.appendChild(WEBVR.createButton(renderer));
+
+        init();
+        // animate();
+
+        function init() {
+          renderer = new THREE.WebGLRenderer();
+          renderer.vr.enabled = true;
+          element = renderer.domElement;
+          container = document.getElementById("container");
+          container.appendChild(element);
+          effect = new THREE.StereoEffect(renderer);
+          scene = new THREE.Scene();
+
+          //Create camera
+          camera = new THREE.PerspectiveCamera(
+            90,
+            window.innerWidth / window.innerHeight,
+            0.01,
+            1000
+          );
+          camera.position.set(0, 12, 0);
+          scene.add(camera);
+
+          // Create the lights
+          var ambientLight = new THREE.AmbientLight(0x999999);
+          scene.add(ambientLight);
+
+          var lights = [];
+          lights[0] = new THREE.DirectionalLight(0xffffff, 1);
+          lights[0].position.set(1, 0, 0);
+          lights[1] = new THREE.DirectionalLight(0x11e8bb, 1);
+          lights[1].position.set(0.75, 1, 0.5);
+          lights[2] = new THREE.DirectionalLight(0x8200c9, 1);
+          lights[2].position.set(-0.75, -1, 0.5);
+          scene.add(lights[0]);
+          scene.add(lights[1]);
+          scene.add(lights[2]);
+
+          octoMain = new THREE.Object3D();
+          scene.add(octoMain);
+
+          var mtlLoader = new THREE.MTLLoader();
+          mtlLoader.load("City.mtl", function(material) {
+            var objLoader = new THREE.OBJLoader();
+            objLoader.setMaterials(material);
+            objLoader.load("City.obj", function(object) {
+              octoMain.add(object);
+            });
+          });
+
+          loader = new THREE.OBJLoader();
+          loader.load("City.obj", function(obj) {
+            octoMain.add(obj);
+          });
+
+          //Create the Particles
+          particle = new THREE.Object3D();
+          scene.add(particle);
+
+          var geometry = new THREE.SphereGeometry(2, 0);
+          var material = new THREE.MeshPhongMaterial({
+            color: 0xffffff,
+            shading: THREE.FlatShading
+          });
+
+          for (var i = 0; i < 1000; i++) {
+            var mesh = new THREE.Mesh(geometry, material);
+            mesh.position
+              .set(
+                Math.random() - 0.5,
+                Math.random() - 0.5,
+                Math.random() - 0.5
+              )
+              .normalize();
+            mesh.position.multiplyScalar(90 + Math.random() * 700);
+            mesh.rotation.set(
+              Math.random() * 2,
+              Math.random() * 2,
+              Math.random() * 2
+            );
+            particle.add(mesh);
+          }
+
+          controls = new THREE.OrbitControls(camera, element);
+
+          controls.target.set(
+            camera.position.x + 0.1,
+            camera.position.y,
+            camera.position.z
+          );
+          controls.noZoom = true;
+          controls.noPan = true;
+
+          function setOrientationControls(e) {
+            if (!e.alpha) {
+              return;
+            }
+            controls = new THREE.DeviceOrientationControls(camera, true);
+            controls.connect();
+            controls.update();
+            element.addEventListener("click", fullscreen, false);
+            window.removeEventListener(
+              "deviceorientation",
+              setOrientationControls,
+              true
+            );
+          }
+          window.addEventListener(
+            "deviceorientation",
+            setOrientationControls,
+            true
+          );
+          window.addEventListener("resize", resize, false);
+          setTimeout(resize, 1);
+        }
+
+        //Keep everything appearing properly on screen when window resizes
+        function resize() {
+          var width = container.offsetWidth;
+          var height = container.offsetHeight;
+
+          camera.aspect = width / height;
+          camera.updateProjectionMatrix();
+
+          renderer.setSize(width, height);
+          effect.setSize(width, height);
+        }
+
+        function update(dt) {
+          resize();
+
+          camera.updateProjectionMatrix();
+
+          controls.update(dt);
+        }
+
+        console.log("what is renderer?", renderer);
+        renderer.setAnimationLoop(function render(dt) {
+          particle.rotation.x += 0.0;
+          particle.rotation.y -= 0.004;
+
+          effect.render(scene, camera);
+        });
+
+        function animate(t) {
+          //requestAnimationFrame(animate);
+
+          particle.rotation.x += 0.0;
+          particle.rotation.y -= 0.004;
+
+          update(clock.getDelta());
+          render(clock.getDelta());
+        }
+
+        function fullscreen() {
+          if (container.requestFullscreen) {
+            container.requestFullscreen();
+          } else if (container.msRequestFullscreen) {
+            container.msRequestFullscreen();
+          } else if (container.mozRequestFullScreen) {
+            container.mozRequestFullScreen();
+          } else if (container.webkitRequestFullscreen) {
+            container.webkitRequestFullscreen();
+          }
+        }
+      };
+    </script>
+  </body>
 </html>
