--- a/index.html
+++ b/index.html
@@ -2,23 +2,17 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>CITYVRS</title>
+	<title>DAT 505 - Ella Chambers</title>
 	<!-- <meta http-equiv="Content-Type" content="text/html; charset=utf-8" /> -->
-	<meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-		<!-- Origin Trial Token, feature = WebXR Device API (For Chrome M69+), origin = https://elloella.github.io, expires = 2019-01-17 -->
-	<meta http-equiv="origin-trial" data-feature="WebXR Device API (For Chrome M69+)" data-expires="2019-01-17" content="Aq1YicFuNXJbG5bjtQcF3xllU1tEyYEovigAy/vpZ2LT3Nnl2izztNq7Rr6kLXKOK4sBa/RoQeRFl6oZ94yyQQ4AAABaeyJvcmlnaW4iOiJodHRwczovL2VsbG9lbGxhLmdpdGh1Yi5pbzo0NDMiLCJmZWF0dXJlIjoiV2ViWFJEZXZpY2VNNjkiLCJleHBpcnkiOjE1NDc3MjkwMTZ9">
-	<!-- Origin Trial Token, feature = WebXR Gamepad Support, origin = https://elloella.github.io, expires = 2019-01-17 -->
-  <meta http-equiv="origin-trial" data-feature="WebXR Gamepad Support" data-expires="2019-01-17" content="Ai3G+lSxv6p9470JNWHCxmdrrI495kqEdjm129g8IMStdDThbS7HPJx4PJPktwxIh6/+STsLgloZtbIcL2zlDAcAAAByeyJvcmlnaW4iOiJodHRwczovL2VsbG9lbGxhLmdpdGh1Yi5pbzo0NDMiLCJmZWF0dXJlIjoiV2ViWFJHYW1lcGFkU3VwcG9ydCIsImV4cGlyeSI6MTU0NzcyOTAxNiwiaXNTdWJkb21haW4iOnRydWV9">
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/three.js/97/three.min.js'></script>
-	<!-- <script src="js/three.js"></script> -->
-	<script src="js/WebVR.js"></script>
+    <!-- <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"> -->
+
+	<script src="reticulm.js"></script>
+	<script src="js/three.js"></script>
+
 	<script src="js/StereoEffect.js"></script>
 	<script src="js/DeviceOrientationControls.js"></script>
 	<script src="js/OrbitControls.js"></script>
 
-  <script src='js/MTLLoader.js'></script>
-  <script src='js/OBJLoader.js'></script>
 	<script src="index.js"></script>
 	<link rel="stylesheet" href="css/style.css">
 </head>
