--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/script.js"></script>
   <script src="js/zenscroll-min.js"></script>
-  <title>My Portfolio</title>
+  <title>Ella Chambers</title>
 </head>
 <body>
 
