--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
         <li data-target="#mainSlider" data-slide-to="1"></li>
         <li data-target="#mainSlider" data-slide-to="2"></li>
       </ol>
-      <div class="carousel-inner">
+      <div class="carousel-inner" >
         <div class="carousel-item active">
-          <img class="first-slide" src="img/Image One.jpg" alt="First slide">
-          <div class="container">
+          <img src="img/Image One.jpg" alt="First">
+          <div class="">
             <div class="carousel-caption">
               <h1>Ella Chambers</h1>
               <p>Photographer, Designer,  Developer</p>
@@ -65,8 +65,8 @@
         </div>
 
         <div class="carousel-item">
-          <img class="second-slide" src="img/Designer.jpg" alt="Second slide">
-          <div class="container">
+          <img src="img/Designer.jpg" alt="Second">
+          <div class="">
             <div class="carousel-caption">
               <h1>Ella Chambers</h1>
               <p>Photographer, Designer, Developer</p>
@@ -75,8 +75,8 @@
         </div>
 
         <div class="carousel-item">
-          <img class="third-slide" src="img/Developer.jpg" alt="Third slide">
-          <div class="container">
+          <img src="img/Developer.jpg" alt="Third">
+          <div class="">
             <div class="carousel-caption">
               <h1>Ella Chambers</h1>
               <p>Photographer, Designer, Developer</p>
@@ -92,7 +92,7 @@
       <div class="row featurette">
         <div class="col-md-7">
           <h2 class="featurette-heading" >Emma Whyte</h2>
-          <p class="lead"> Emma Whyte is an interior designer who’s website wasn’t fitting her image. She hired me to create a more modern interactive website that was more reflective of her work. Emma didn’t have any strict plan for what she wanted the whole website to look like so I had a lot of freedom to explore and to play around with the design of it.  I decided to go for something colourful and stylish to reflect on the products Emma makes. Click on the image to view the live website. </p>
+          <p class="lead"> Emma Whyte is an interior designer who’s website wasn’t fitting her image. She hired me to create a more modern interactive website that was more reflective of her work. Emma didn’t have any strict plan for what she wanted the whole website to look like so I had a lot of freedom to explore and to play around with the design of it.  I decided to go for something colourful and stylish to reflect on the products Emma makes. Please click on the image to view the website. </p>
         </div>
         <div class="col-md-5">
           <a href="https://www.emmawhyte.co.uk/" target="_blank">
@@ -138,11 +138,15 @@
       <div class="row featurette">
         <div class="col-md-7">
           <h2 class="featurette-heading">VR Cityscape</h2>
-          <p class="lead"> For the next module of my second year we were asked to develop an engaging realtime audiovisual experience. For this module we had to use three.js and 3D modelling, it was my first time using both of them. I decided that I wanted to create a 3D cityscape in VR. I had never used VR before so this came with its challenges. I had to do a lot of research into both three.js and VR to understand how I could code the project. After a lot of experimenting I was able to create a VR scene with my 3D model that I created on Maya and used photoshop to create my own textures. Initially, the user could view the whole scene from a fixed position but I decided that I wanted it to be more interactive so I included first person controls that enabled the user to fly around the scene. I faced challenges when it came to making the VR work on a mobile and laptop. Some functions that worked on a laptop browser would not have the same effect on the mobile. At the moment the VR scene on a mobile is still in the fixed position, the user cannot move forward, this is something that I would like to change and I’m sure with time and a better understanding of VR and three.js I will be able to change this. </p>
+          <p class="lead"> For the next module of my second year we were asked to develop an engaging realtime audiovisual experience. For this module we had to use three.js and 3D modelling, it was my first time using both of them. I decided that I wanted to create a 3D cityscape in VR. I had never used VR before so this came with its challenges. I had to do a lot of research into both three.js and VR to understand how I could code the project. After a lot of experimenting I was able to create a VR scene with my 3D model that I created on Maya and used photoshop to create my own textures. Initially, the user could view the whole scene from a fixed position but I decided that I wanted it to be more interactive so I included first person controls that enabled the user to fly around the scene. I faced challenges when it came to making the VR work on a mobile and laptop. Some functions that worked on a laptop browser would not have the same effect on the mobile. At the moment the VR scene on a mobile is still in the fixed position, the user cannot move forward, this is something that I would like to change and I’m sure with time and a better understanding of VR and three.js I will be able to change this. Please click on the image to view the website on a laptop or dekstop. To see it on Mobile please
+          <a href=" https://mobilevr-cityscape.herokuapp.com/ " target="_blank">
+            click here
+            </a>
+          </p>
         </div>
         <div class="col-md-5">
             <a href=" https://webvr-cityscape.herokuapp.com/" target="_blank">
-          <img class="w-75 hvr-grow-shadow" src="img/Filler.jpg">
+          <img class="w-75 hvr-grow-shadow" src="img/VR.jpg">
         </a>
         </div>
       </div>
@@ -154,7 +158,10 @@
       <div class="container">
         <h2 class="text-center">Want to Know More?</h2>
 
-        <p class="text-center">I have always had a keen interest in technology and I am fascinated by how it is ever evolving. Through studying English Literature and Drama at Sixth Form,  my imagination has matured. English Literature deepened my understanding of how everyone sees things differently, I believe this is key to web design in ensuring inclusivity and celebration of diversity for intergenerational audiences. I am currently at Plymouth University studying Internet Design developing my coding and programming knowledge further and hope to one day show the world that women can also be very successful in what is currently a male led industry.  </p>
+        <p class="text-center">I have always had a keen interest in technology and I am fascinated by how it is ever evolving. Through studying English Literature and Drama at Sixth Form, my imagination has matured. English Literature deepened my understanding of how everyone sees things differently, I believe this is key to web design in ensuring inclusivity and celebration of diversity for intergenerational audiences.
+          I feel that the power of technology is underrated at times, it really can change lives. Growing up as a visual learner I found forms of e-learning exceptionally beneficial and life changing. By using creativity and imagination people can be taught several skills without even realising they are learning. I am currently at Plymouth University studying Internet Design developing my coding and programming knowledge further and hope to one day show the world that women can also be very successful in what is currently a male led industry.
+
+</p>
       </div>
     </div>
   </div>
