--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       <div class="row featurette">
         <div class="col-md-7">
           <h2 class="featurette-heading" >Emma Whyte</h2>
-          <p class="lead"> Emma Whyte is an interior designer who’s website wasn’t fitting her image. She hired me to create a more modern interactive website that was more reflective of her work. Emma didn’t have any strict plan for what she wanted the whole website to look like so I had a lot of freedom to explore and to play around with the design of it.  I decided to go for something colourful and stylish to reflect on the products Emma makes. Please click on the image to view the website. </p>
+          <p class="lead"> Emma Whyte is an interior designer whose website wasn’t fitting her image. She hired me to create a more modern interactive website that was more reflective of her work. Emma didn’t have any strict plan for what she wanted the whole website to look like so I had a lot of freedom to explore and to play around with the design of it.  I decided to go for something colourful and stylish to reflect on the products Emma makes. Please click on the image to view the website. </p>
         </div>
         <div class="col-md-5">
           <a href="https://www.emmawhyte.co.uk/" target="_blank">
@@ -159,7 +159,7 @@
         <h2 class="text-center">Want to Know More?</h2>
 
         <p class="text-center">I have always had a keen interest in technology and I am fascinated by how it is ever evolving. Through studying English Literature and Drama at Sixth Form, my imagination has matured. English Literature deepened my understanding of how everyone sees things differently, I believe this is key to web design in ensuring inclusivity and celebration of diversity for intergenerational audiences.
-          I feel that the power of technology is underrated at times, it really can change lives. Growing up as a visual learner I found forms of e-learning exceptionally beneficial and life changing. By using creativity and imagination people can be taught several skills without even realising they are learning. I am currently at Plymouth University studying Internet Design developing my coding and programming knowledge further and hope to one day show the world that women can also be very successful in what is currently a male led industry.
+          I feel that the power of technology is underrated at times, it really can change lives. Growing up as a visual learner I found forms of e-learning exceptionally beneficial and life changing. By using creativity and imagination people can be taught several skills without even realising they are learning. I am currently at Plymouth University studying Internet Design developing my coding and programming knowledge further and hope to one day become highly successful within the industry.
 
 </p>
       </div>
