--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
         <input class="form-control" id="phone" type="tel" placeholder="Phone Number" required="required">
       </div>
       <div class="form-group">
-        <textarea class="form-control" id="message" rows="5" placeholder="Message" required="required"></textarea>
+        <textarea class="form-control" id="message" rows="5" placeholder="Message" name="message" required="required"></textarea>
       </div>
       <div class="form-group">
         <button class="btn btn-primay  w-100" style="background-color: #BEE9E8" type="submit">Send</button>
