--- a/index.html
+++ b/index.html
@@ -4,142 +4,206 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link href="css/bootstrap.min.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Libre+Franklin" rel="stylesheet">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0/dist/Chart.min.js"></script>
+  <link href="https://fonts.googleapis.com/css?family=Economica|Prompt" rel="stylesheet">
+  <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
-  <title>Jengu</title>
+  <link href="css/hover.min.css" rel="stylesheet">
+  <script type="text/javascript" src="js/instafeed.min.js"></script>
+  <script src="js/jquery.min.js"></script>
+  <script src="js/bootstrap.bundle.min.js"></script>
+  <script src="js/script.js"></script>
+  <script src="js/zenscroll-min.js"></script>
+  <title>Ella Chambers</title>
 </head>
 <body>
 
-<!-- Nav Bar -->
   <header>
-    <nav class="navbar navbar-expand-md fixed-top navbar-dark" style="background-color: #35A793;">
-      <a class="navbar-brand hvr-grow" href="index.html">
-        <img src="img/Logo.png" width="70" height="35" alt=""> </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <a class="navbar-brand hvr-grow ml-auto" href="profile.html" target="_blank"> <i class="icon far fa-user"></i> </a>
-      </nav>
-    </header>
-
-<!-- Graph and Breakdown -->
-    <section class="filler container ">
-      <div class="row justify-content-around ">
-        <div class=" col-6 mt-5">
-
-<!-- Setting up buttons -->
-          <div class="row">
-            <div class="col-1 text-center mb-1">
-              <button type="button" class="button1 btn btn-default btn-sm mt-2 pt-2 pb-2" id="bp" >Blood Pressure</button>
-            </div>
-            <div class="col-6 text-center mb-1">
-              <button type="button" class="button1 btn btn-default btn-sm mt-2 pt-2 pb-2" id="bs" >Blood Sugar</button>
-            </div>
-          </div>
-
-<!-- Setting up chart-->
-          <div class="chartContainer">
-            <i class=" col text-right fas fa-plus mt-1 pt-1 pb-1" data-toggle="modal" data-target="#Add" ></i>
-            <canvas id="myChart" > </canvas>
-            <div class="row symbols">
-              <i class="col text-left fas fa-chevron-left pb-1 " id="left-bs" ></i>
-              <i class="col text-right fas fa-chevron-right pb-1" id="right-bs"></i>
-              <i class="col text-left fas fa-chevron-left pb-1 " id="left-bp" ></i>
-              <i class="col text-right fas fa-chevron-right pb-1" id="right-bp"></i>
-            </div>
-          </div>
-        </div>
-
-<!-- Setting up breakdown -->
-        <div class="breakdown col-6 mt-5">
-          <h class="font-weight-bold"> Daily Breakdown: </h>
-          <p class="font-weight-bold"> 15/3 </p>
-        </div>
+    <nav class="navbar navbar-expand-md fixed-top navbar-dark" style="background-color: #258EA6;">
+      <a class="navbar-brand hvr-grow" href="#">Ella Chambers</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarCollapse">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item">
+            <a class="nav-link hvr-grow" href="#jumptoprojects">My Projects</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link hvr-grow" href="#jumptoabout">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link hvr-grow" href="#jumptocontact">Contact Us</a>
+          </li>
+        </ul>
+          <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <!-- <a class="nav-link hvr-grow" href="https://www.instagram.com/erm.designs/ "target="_blank"><i class= "fab fa-instagram"></i></a> -->
+          </li>
+        </ul>
+        </ul>
       </div>
-    </section>
+    </nav>
+  </header>
 
-    <!-- Table  -->
-    <section class= "ta container text-center mt-3 pt-3 pb-3 ">
-      <table class="table table-bordered">
-        <thead>
-          <tr>
-            <th scope="col">LOWEST</th>
-            <th scope="col">HIGHEST</th>
-            <th scope="col">AVERAGE</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td id="lowest">&nbsp;</td>
-            <td id="highest">&nbsp;</td>
-            <td id="average">&nbsp;</td>
-          </tr>
-        </tbody>
-      </table>
-    </section>
+  <main role="main">
 
-<!-- GP Button -->
-    <div class="container">
-      <div class="row">
-        <div class="col text-center">
-          <button type="button" class="button btn btn-default btn-block btn-lg mt-2 pt-2 pb-2" > Have a question for your GP?</button>
+    <div id="mainSlider" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#mainSlider" data-slide-to="0" class="active"></li>
+        <li data-target="#mainSlider" data-slide-to="1"></li>
+        <li data-target="#mainSlider" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner" >
+        <div class="carousel-item active">
+          <img src="img/Image One.jpg" alt="First">
+          <div class="">
+            <div class="carousel-caption">
+              <h1>Ella Chambers</h1>
+              <p>Photographer, Designer,  Developer</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="carousel-item">
+          <img src="img/Designer.jpg" alt="Second">
+          <div class="">
+            <div class="carousel-caption">
+              <h1>Ella Chambers</h1>
+              <p>Photographer, Designer, Developer</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="carousel-item">
+          <img src="img/Developer.jpg" alt="Third">
+          <div class="">
+            <div class="carousel-caption">
+              <h1>Ella Chambers</h1>
+              <p>Photographer, Designer, Developer</p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
 
-<!-- Add Modal -->
-    <div class="modal fade" id="Add" tabindex="-1" role="dialog" aria-labelledby="Addlabel" aria-hidden="true">
-      <div class="modal-dialog modal-dialog-centered" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class=" col-12 modal-title text-center" id="Addlabel">Daily Log
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span> <h/5>
-              </div>
-              <div class="modal-body">
-                <div class="modal-body">
-                  <form>
-                    <div class="form-group ">
-                      <input id="Date" class="test form-control" name="Date" type="text" placeholder="Date" required />
-                    </div>
-                    <div class="form-group ">
-                      <input id="Breakfast Figures" class="test form-control" name="Breakfast Figures" type="text" placeholder="Breakfast Figures" required />
-                    </div>
-                    <div class="form-group ">
-                      <input id="Lunch Figures" class="test form-control" name="Lunch Figures" type="text" placeholder="Lunch Figures" required />
-                    </div>
-                    <div class="form-group ">
-                      <input id="Dinner Figures" class="test form-control" name="Dinner Figures" type="text" placeholder="Dinner Figures" required />
-                    </div>
-                    <div class="form-group ">
-                      <input id="Night Figures" class="test form-control" name="Night Figures" type="text" placeholder="Night Figures" required />
-                    </div>
-                    <div class="form-group ">
-                      <input id="Notes" class="test form-control" name="Notes" type="text" placeholder="Notes" required />
-                    </div>
-                  </form>
-                </div>
-                <div class="modalbutton mb-3 text-center">
-                  <button type="button" class="button btn btn-default col-5 ">Add</button>
-                </div>
-              </div>
-            </div>
-          </div>
+    <div class="container">
+      <h2 class= "text-center" id="jumptoprojects"> My Projects</h2>
+      <hr class="mb-5">
+      <div class="row featurette">
+        <div class="col-md-7">
+          <h2 class="featurette-heading" >Emma Whyte</h2>
+          <p class="lead"> Emma Whyte is an interior designer whose website wasn’t fitting her image. She hired me to create a more modern interactive website that was more reflective of her work. Emma didn’t have any strict plan for what she wanted the whole website to look like so I had a lot of freedom to explore and to play around with the design of it.  I decided to go for something colourful and stylish to reflect on the products Emma makes. Please click on the image to view the website. </p>
         </div>
+        <div class="col-md-5">
+          <a href="https://www.emmawhyte.co.uk/" target="_blank">
+            <img class="w-75 hvr-grow-shadow" src="img/EW Logo.jpg">
+          </a>
+        </div>
+      </div>
+      <hr class="featurette-divider">
+      <div class="row featurette">
+        <div class="col-md-7 order-md-2">
+          <h2 class="featurette-heading">1984 Book Cover </h2>
+          <p class="lead">For one of my modules in my first year of University, we were asked to recreate the book cover of George Orwells 1984. I did a lot of research into old book covers and into Orwell’s life and the message he wanted the book to deliver. For my book cover I wanted to encapsulate the theme of control, it communicates the harsh dystopia that Orwell created in the book. I used the colour red to link back to communist propaganda and the idea of power, and the black to show the bleak darkness of the novel. I learnt a lot through the process and came up with a lot of ideas and realised how development and learning from failures is a very important part of the design process.</p>
+        </div>
+        <div class="col-md-5 order-md-1 " >
+          <!-- <a href="https://www.emmawhyte.co.uk/" target="_blank"> -->
+            <img class="w-75 hvr-" src="img/1984.jpg">
+          </a>
+        </div>
+      </div>
+      <hr class="featurette-divider">
+      <div class="row featurette">
+        <div class="col-md-7">
+          <h2 class="featurette-heading">Karma Clock</h2>
+          <p class="lead">For another module in my first year we were asked to produce designs for a visually engaging information-based iPad app. We were given three different topics and I picked Life Predictor. After the initial planning process, I came up with the idea of creating an app that predicted roughly when a person may die and whether or not they would go to heaven or hell, this later became ‘Karma Clock’. I did a lot of research into heaven and hell and the beliefs of different religions and found the concept of Karma to be quite interesting, I decided that it could be a more entertaining concept for the app to show the user which animal they would be reincarnated as, due to their ‘Karma Points’ instead of the initial Heaven/Hell idea. I really enjoyed the whole design process and had a lot of fun with colours and drawings. I experimented with several colour schemes and fonts until I found the combination that looked the best. The final product looked very different to the initial wireframes and I was proud of what I created in the end.  </p>
+        </div>
+        <div class="col-md-5">
+          <img class="w-75 hvr-" src="img/KarmaClock.jpg">
+        </div>
+      </div>
+      <hr class="featurette-divider">
+      <div class="row featurette">
+        <div class="col-md-7 order-md-2">
+          <h2 class="featurette-heading">Hero</h2>
+          <p class="lead">For one of my first modules of second year we were asked to create and pitch a new product. We decided we wanted to design a piece of wearable emergency technology that would make the user feel safer when walking alone.  This later became ‘Hero’. For the design process I created the wireframes and final designs for both our jewellery items and our app. We went through several different jewellery ideas and settled with three basic colour options, gold, silver and black. I kept the designs for the jewellery simple to ensure that they would be suitable for any gender and age. When designing the app I wanted to ensure that it was very simple to use, not confusing and that it fulfilled its main function, which is to help people share their location and feel safe. I think we came out with an interesting final product that I feel would actually benefit people’s lives. </p>
+        </div>
+        <div class="col-md-5 order-md-1 " >
+          <!-- <a href="https://www.emmawhyte.co.uk/" target="_blank"> -->
+            <img class="w-75 hvr-" src="img/hero.jpg">
+          </a>
+        </div>
+      </div>
+      <hr class="featurette-divider">
+      <div class="row featurette">
+        <div class="col-md-7">
+          <h2 class="featurette-heading">VR Cityscape</h2>
+          <p class="lead"> For the next module of my second year we were asked to develop an engaging realtime audiovisual experience. For this module we had to use three.js and 3D modelling, it was my first time using both of them. I decided that I wanted to create a 3D cityscape in VR. I had never used VR before so this came with its challenges. I had to do a lot of research into both three.js and VR to understand how I could code the project. After a lot of experimenting I was able to create a VR scene with my 3D model that I created on Maya and used photoshop to create my own textures. Initially, the user could view the whole scene from a fixed position but I decided that I wanted it to be more interactive so I included first person controls that enabled the user to fly around the scene. I faced challenges when it came to making the VR work on a mobile and laptop. Some functions that worked on a laptop browser would not have the same effect on the mobile. At the moment the VR scene on a mobile is still in the fixed position, the user cannot move forward, this is something that I would like to change and I’m sure with time and a better understanding of VR and three.js I will be able to change this. Please click on the image to view the website on a laptop or dekstop. To see it on Mobile please
+          <a href=" https://mobilevr-cityscape.herokuapp.com/ " target="_blank">
+            click here
+            </a>
+          </p>
+        </div>
+        <div class="col-md-5">
+            <a href=" https://webvr-cityscape.herokuapp.com/" target="_blank">
+          <img class="w-75 hvr-grow-shadow" src="img/VR.jpg">
+        </a>
+        </div>
+      </div>
 
-<!-- Footer -->
-        <footer class="text-center mt-5 pt-1 pb-1">
-          <div class="container">
-            <small>Copyright &copy; <span id="autoDate"></span></small>
-          </div>
-        </footer>
+      <hr class="featurette-divider" id="jumptoabout">
+    </div>
 
-<!-- Scripts-->
-        <script src="js/jquery.min.js"></script>
-        <script src="js/bootstrap.bundle.min.js"></script>
-        <script src="js/script.js"></script>
+    <section class="aboutUsSection mt-5 pt-5 pb-5 " >
+      <div class="container">
+        <h2 class="text-center">Want to Know More?</h2>
 
-      </body>
-      </html>
+        <p class="text-center">I have always had a keen interest in technology and I am fascinated by how it is ever evolving. Through studying English Literature and Drama at Sixth Form, my imagination has matured. English Literature deepened my understanding of how everyone sees things differently, I believe this is key to web design in ensuring inclusivity and celebration of diversity for intergenerational audiences.
+          I feel that the power of technology is underrated at times, it really can change lives. Growing up as a visual learner I found forms of e-learning exceptionally beneficial and life changing. By using creativity and imagination people can be taught several skills without even realising they are learning. I am currently at Plymouth University studying Internet Design developing my coding and programming knowledge further and hope to one day become highly successful within the industry.
+
+</p>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- <div class="container">
+  <h2 class="text-center pt-5">My Social Media</h2>
+  <hr class="mb-5">
+  <div id="instafeed" class="row"></div>
+</div> -->
+
+<section>
+  <div class="container">
+    <h2 class="text-center pt-5" id="jumptocontact">Have Any Queries?</h2>
+    <hr class="mb-5">
+    <form action="https://formspree.io/ellachambers98@gmail.com" method="POST">
+      <div class="form-group">
+        <input class="form-control" id="name" type="text" placeholder="Name" required="required">
+      </div>
+      <div class="form-group">
+        <input class="form-control" id="email" type="email" placeholder="Email Address" required="required">
+      </div>
+      <div class="form-group">
+        <input class="form-control" id="phone" type="tel" placeholder="Phone Number" required="required">
+      </div>
+      <div class="form-group">
+        <textarea class="form-control" id="message" rows="5" placeholder="Message" required="required"></textarea>
+      </div>
+      <div class="form-group">
+        <button class="btn btn-primay  w-100" style="background-color: #BEE9E8" type="submit">Send</button>
+      </div>
+    </form>
+  </div>
+</section>
+
+<footer class="text-center pt-1 pb-1">
+  <div class="container">
+      <small>Copyright &copy; <span id="autoDate"></span></small>
+  </div>
+</footer>
+
+
+
+</body>
+</html>
